--- a/.gitignore
+++ b/.gitignore
@@ -7,25 +7,29 @@ xhs/xhs_results*/
 toutiao/
 weixin/weixin_articles
 weixin/weixin_comments
+douyin/douyin_results*
+douyin/all_data*
 all_data/
 __pycache__/
 *final_results/
 *results_final/
+sample_data/
 
 # 忽略文件
 .env
 .gitignore
-cookies.txt
+
 weixin/url.xlsx
+
 weibo_cookie.json
-weibo_urls.txt
 zhihu_cookie*.json
-zhihu_urls.txt
-comments*.csv
-filtered_urls*.txt
-zhihu_data*.csv
-*.txt
 xhs/all_data*.json
-douyin/douyin_results*
-douyin/all_data*
-qwen.py
+douyin/diff_data*.json
+
+zhihu_data*.csv
+comments*.csv
+
+*.txt
+
+qwen*.py
+utils.py
