增加对模型生成的标签的清洗，部分文件列名统一

--- a/.gitignore
+++ b/.gitignore
@@ -26,10 +26,7 @@ zhihu_cookie*.json
 xhs/all_data*.json
 douyin/diff_data*.json
 
-zhihu_data*.csv
-comments*.csv
-
+*.csv
 *.txt
 
 qwen*.py
-utils.py
